Fixed styles on iOS

--- a/public/styles/worm-under-a-video.css
+++ b/public/styles/worm-under-a-video.css
@@ -165,6 +165,7 @@ h1 {
 
 #slider-vertical {
     background: linear-gradient(to bottom, #4eb748 0%,#941a1d 100%); /* W3C */
+    background: -webkit-linear-gradient(top, #4eb748 0%,#941a1d 100%); /* Chrome10+,Safari5.1+ */
 }
 
 .slider-container {
